[package]
name = "dk-rtic-smoltcp-6lowpan"
version = "0.0.1"
edition = "2021"
authors = ["Odd Stråbø <oddstr13@openshell.no>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
cortex-m-rtic = "1.0.0"
fugit = "0.3.5"
panic-halt = "0.2.0"
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
#nrf52840-hal = {path = "../../OSH-HA-Sensornet/nrf-hal/nrf52840-hal"}
nrf52840-hal = "0.15.0"
#sh1107 = {version = "0.3.5", path = "../../sh1107"}
#embedded-graphics = "0.7.1"
#smart-leds = "0.3.0"
#ws2812-spi = "0.4.0"


# USB Serial
usb-device = "0.2.7"
usbd-serial = "0.1.0"